<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.avbravo</groupId>
    <artifactId>sftalert</artifactId>
    <version>1.0.b-31</version>
    <packaging>war</packaging>
    <name>sftalert</name>
    
    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <jakartaee>10.0.0</jakartaee>
        <payara.version>6.2024.2</payara.version>
        <microprofile.version>6.1</microprofile.version>
        <!--<microprofile.version>6.0</microprofile.version>-->
        <microprofile-config-api.version>3.0</microprofile-config-api.version>
        <microprofile-health-api.version>4.0</microprofile-health-api.version>
        <microprofile-metrics-api.version>5.0.0</microprofile-metrics-api.version>
        <jmeter.version>2.6.0</jmeter.version>
        <final.name>sftalert</final.name>
        
        <version.jmoordbcore>1.0.0.b-9</version.jmoordbcore>
        <version.jmoordbfaces>1.3</version.jmoordbfaces>
        <version.jmoordbutilfaces>0.7</version.jmoordbutilfaces>
        <version.jmoordbencripter>2.0</version.jmoordbencripter>
        
      
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakartaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.microprofile</groupId>
            <artifactId>microprofile</artifactId>
            <version>${microprofile.version}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.microprofile.config</groupId>
            <artifactId>microprofile-config-api</artifactId>
            <version>${microprofile-config-api.version}</version>
        </dependency>
        
        
        <dependency>
            <groupId>org.eclipse.microprofile.health</groupId>
            <artifactId>microprofile-health-api</artifactId>
            <version>${microprofile-health-api.version}</version>
            <type>jar</type>
        </dependency>
        
        <dependency>
            <groupId>org.eclipse.microprofile.metrics</groupId>
            <artifactId>microprofile-metrics-api</artifactId>        
            <version>${microprofile-metrics-api.version}</version>
        </dependency>
        

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        

  
  
 
        <!--Jakarta Faces
        
        -->
        <!--   
        <dependency>
            <groupId>jakarta.faces</groupId>
            <artifactId>jakarta.faces-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>-->
        <!--        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>13.0.0</version>
            <classifier>jakarta</classifier>
        </dependency>-->
        <!--
        lombok
        -->

        <!--        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>-->
    
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>5.1.3</version>
        </dependency>

        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>font-awesome</artifactId>
            <version>6.0.0</version>
        </dependency>
    
    
        <!--
        jmoordb-core
        -->
       <dependency>
            <groupId>com.github.avbravo</groupId>
            <artifactId>jmoordb-core</artifactId>
            <version>${version.jmoordbcore}</version>
        </dependency>
      
        <dependency>
            <groupId>com.github.avbravo</groupId>
            <artifactId>jmoordbencripter</artifactId>
            <version>${version.jmoordbencripter}</version>
        </dependency>
       
    </dependencies>
    
    <build>
        <finalName>${final.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                    
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>jakarta.platform</groupId>
                                    <artifactId>jakarta.jakartaee-api</artifactId>
                                    <version>${jakartaee}</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>fish.payara.maven.plugins</groupId>
                <artifactId>payara-micro-maven-plugin</artifactId>
                <configuration>
                    <payaraVersion>${payara.version}</payaraVersion>
                    <deployWar>false</deployWar>
                    <commandLineOptions>
                        <option>
                            <key>--autoBindHttp</key>
                        </option>
       
                        <!--puerto 9002 -->
                        <option>
                            <key>--port</key>
                            <value>9080</value>
                        </option>
                        <!-- desabilita Hazelcas -->
                        <option>
                            <key>--noHazelcast</key>
                        </option>
                        <option>
                            <key>--logo</key>
                        </option>

                        <option>
                            <key>--deploy</key>
                            <value>${project.build.directory}/${project.build.finalName}</value>
                        </option>
                    </commandLineOptions>
                    <!--
                    JDK 17+ Soluciona error con EJB
                    -->                         
                    <javaCommandLineOptions>
                        <option>
                            <key>--add-opens</key>
                            <value>java.base/java.io=ALL-UNNAMED</value>
                        </option>
                        <option>
                            <key></key>
                            <value>-Djdk.util.zip.disableZip64ExtraFieldValidation=true</value>
                        </option>
                    </javaCommandLineOptions>    
                </configuration>
                <version>2.0</version>
            </plugin>
            
        
        </plugins>
        
        
        <!--
Blocks
        -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                <includes>
                    <include>web.xml</include>
                </includes>
                <filtering>true</filtering>
                <targetPath>${project.build.directory}</targetPath>
            </resource>
        </resources>
    </build>
    

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

</project>
